# cube_rust_example

./: Cargo.toml  c.dot  c.rb  corners.txt
src/: main.rs
