[package]
name = "cube"
version = "0.1.0"
authors = ["Toshiaki Ishikura <craccho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.8.0"
memoize = "0.1.9"
lazy_static = "1.4.0"

[profile.release]
debug = true